Atualização de texto e contactos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Bem-vindo ao meu portfólio!</h2>
 
         <p>Concluí o curso de Informática e Tecnologias Multimédia no Colégio de Gaia, onde desenvolvi competências em programação com linguagens como C#, Visual Basic, HTML, CSS, PHP e MySQL, com foco na criação de aplicações web e integração com bases de dados.
-            Possuo também conhecimentos em redes de computadores, incluindo configuração e resolução de problemas, e em hardware, abrangendo montagem, manutenção e diagnóstico de sistemas.
+            Possuo também conhecimentos em redes de computadores, incluindo configuração e resolução de problemas, e em hardware, abrangendo montagem, manutenção e diagnóstico de sistemas. Este permitiu-me obter um diploma QNQ de nível 4.
         </p>
 
     </section>
@@ -31,7 +31,12 @@
     <section id="curso">
         <h1>Educação</h1>
         <h2>Curso de Informática e Tecnologias Multimédia no Colégio de Gaia</h2>
-        <p>Frequentei curso com Plano Próprio de Informática e Tecnologias Multimédia que agrega as vertentes informática, multimédia, gestão de redes e bases de dados.</p>
+        <p>Frequentei curso com Plano Próprio de Informática e Tecnologias Multimédia que agrega as vertentes informática, multimédia, gestão de redes e bases de dados.
+            <br>
+            O plano curricular é estruturado de forma a permitir aos alunos escolherem os seus caminhos acadêmicos e profissionais para várias áreas, como programação, tecnologia web e dispositivos móveis, bases de dados, gestão de infraestrutura informática (redes e segurança) e jogos digitais. Após a sua conclusão, é atribuído ao aluno um diploma do QNQ de nível 4, podendo prosseguir estudos para o ensino superior ou entrar para o mercado de trabalho.
+        </p>
+        <h2>Competências digitais:</h2>
+        <br>
         <h3>Programação:</h3>
         <ul>
             <li>Desenvolvimento de aplicações em Visual Basic</li>
@@ -39,19 +44,16 @@
             <li>Criação de websites e aplicações web utilizando HTML, CSS, JS e PHP</li>
             <li>Desenvolvimento de jogos em Unity</li>
         </ul>
+        <br>
+
         <h3>Bases de dados:</h3>
         <ul>
             <li>Criação de bases de dados relacionais</li>
             <li>Conhecimentos de Sistemas Gestores de bases de dados: phpMyadmin, MySQL, Access</li>
             <li>SQL</li>
         </ul>
-        <h3>Ferramentas:</h3>
-        <ul>
-            <li>Microsoft Office: Word, Powerpoint, Excel, Publisher</li>
-            <li>Edição e imagem: photoshop, canva</li>
-            <li>Edição de vídeo: Davinci Resolve, Capcut</li>
-            <li>Ferramentas de produtividade: Trello, Jira, MS Project</li>
-        </ul>
+        <br>
+
         <h3>Redes de Computadores e hardware:</h3>
         <ul>
             <li>Instalação, configuração e manutenção de computadores, periféricos, redes informáticas e sistemas operativos.</li>
@@ -59,7 +61,16 @@
             <li>Instalação, configuração e administração de software de gestão de redes informáticas.</li>
         </ul>
         <br>
-        <p>Durante a realização deste curso desenvolvi vários projetos</p>
+
+        <h3>Ferramentas:</h3>
+        <ul>
+            <li>Microsoft Office: Word, Powerpoint, Excel, Publisher</li>
+            <li>Edição e imagem: photoshop, canva</li>
+            <li>Edição de vídeo: Davinci Resolve, Capcut</li>
+            <li>Ferramentas de produtividade: Trello, Jira, MS Project</li>
+        </ul>
+        <br>
+        <p>Durante a realização deste curso desenvolvi vários projetos:</p>
         <a href="projetos.html" class="btn">Ver lista de projetos</a>
     </section>
 
