--- a/projetos.html
+++ b/projetos.html
@@ -96,7 +96,7 @@
 
     <!-- Seção de Projetos -->
     <section id="projetos">
-        <h2>Projetos Realizados</h2>
+        <h2>Principais Projetos Realizados</h2>
 
         <!-- Expolive -->
         <div class="projeto">
