--- a/contactos.html
+++ b/contactos.html
@@ -3,9 +3,213 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portefólio|Contactos</title>
+    <title>Portefólio | Contactos</title>
+    <link rel="stylesheet" href="css/main.css">
+    <style>
+        /* Estilos gerais */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+
+        header {
+            background-color: #101c3c;
+            color: white;
+            text-align: center;
+            padding: 1.5rem;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            color: white; /* Certifique-se de que o nome esteja em branco */
+        }
+
+        header p {
+            margin: 0;
+            font-size: 1.2rem;
+            margin-top: 0.5rem;
+            color: white; /* Certifique-se de que o texto esteja em branco */
+        }
+
+        header nav ul {
+            list-style: none;
+            padding: 0;
+            margin-top: 1rem;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 1rem;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem;
+            transition: color 0.3s;
+        }
+
+        header nav ul li a:hover {
+            color: #ffcc00;
+        }
+
+        .container {
+            padding: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            margin-top: 2rem;
+        }
+
+        h1 {
+            text-align: center;
+            color: #101c3c;
+            margin-bottom: 1.5rem;
+        }
+
+        .tit{
+            text-align: center;
+            color: white;
+            margin-bottom: 1.5rem;
+        }
+
+        .contact-item {
+            display: flex;
+            align-items: center;
+            margin: 1.5rem 0;
+            padding: 1rem;
+            background-color: #f4f4f9;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .contact-item img {
+            width: 40px;
+            height: 40px;
+            margin-right: 1rem;
+        }
+
+        .contact-item h3 {
+            font-size: 1.5rem;
+            color: #101c3c;
+            margin: 0;
+            margin-bottom: 0.5rem;
+        }
+
+        .contact-item p, .contact-item a {
+            font-size: 1.2rem;
+            color: #333;
+            text-decoration: none;
+            margin: 0;
+        }
+
+        .contact-item a:hover {
+            color: #ffcc00;
+        }
+
+        .btn-container {
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #101c3c;
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .btn:hover {
+            background-color: #ffcc00;
+        }
+
+        footer {
+            background-color: #101c3c;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>Diogo Menezes</h1>
+        <p>Estudante na área da Informática</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="contactos.html" class="active">Contactos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container">
+        <h1>Contactos</h1>
+
+        <!-- Morada -->
+        <div class="contact-item">
+            <img src="img/home.svg" alt="Morada">
+            <div>
+                <h3>Morada</h3>
+                <p>Vila Nova de Gaia, Porto, Portugal</p>
+            </div>
+        </div>
+
+        <!-- Email -->
+        <div class="contact-item">
+            <img src="img/mail.svg" alt="Email">
+            <div>
+                <h3>Email</h3>
+                <p><a href="mailto:diotomasmeneses@gmail.com">diotomasmeneses@gmail.com</a></p>
+            </div>
+        </div>
+
+        <!-- Telemóvel -->
+        <div class="contact-item">
+            <img src="img/telefone.svg"Telemóvel">
+            <div>
+                <h3>Telemóvel</h3>
+                <p><a href="tel:+351966937740">+351 966 937 740</a></p>
+            </div>
+        </div>
+
+        <!-- LinkedIn -->
+        <div class="contact-item">
+            <img src="img/link.svg" alt="LinkedIn">
+            <div>
+                <h3>LinkedIn</h3>
+                <p><a href="https://www.linkedin.com/in/diogo-menezes-42a755324/" target="_blank">Perfil no LinkedIn</a></p>
+            </div>
+        </div>
+
+        <!-- Europass -->
+        <div class="contact-item">
+            <img src="img/european-union.svg" alt="Europass">
+            <div>
+                <h3>Currículo Europass</h3>
+                <p><a href="https://europa.eu/europass/eportfolio/api/eprofile/shared-profile/diogo+tom%C3%A1s+machado+basto+de-menezes/d4d55496-1ecb-480e-96c8-c417349e2f9c?view=html" target="_blank">Visualizar Currículo</a></p>
+            </div>
+        </div>
+
+        <!-- Botão Voltar -->
+        <div class="btn-container">
+            <a href="index.html" class="btn">Voltar</a>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
