Correção de erro

--- a/projetos.html
+++ b/projetos.html
@@ -102,14 +102,14 @@
         <div class="projeto">
             <h3>Expolive</h3>
             <p>Projeto que consistiu na elaboração de podcasts, visitas a stands, entrevistas e transmissão do torneio de CS durante a Expocolgaia</p>
-            <a href="expolive.html">Ver mais</a>
+            <a href="Expolive.html">Ver mais</a>
         </div>
 
         <!-- FlightBase -->
         <div class="projeto">
             <h3>FlightBase</h3>
             <p>FlightBase é uma aplicação que permite ao utilizador guardar informações de voos, como detalhes a aeronave, companhia aérea e o destino.</p>
-            <a href="flightbase.html">Ver mais</a>
+            <a href="Flightbase.html">Ver mais</a>
         </div>
 
         <!-- TravelShare -->
