--- a/TravelShare_PAP.html
+++ b/TravelShare_PAP.html
@@ -138,8 +138,12 @@
     </div>
 <br>
 <br>
-    <footer>
-        <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
-    </footer>
+
+<footer>
+    <p>Site em Construção</p>
+    <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
+    <p>Projeto desenvolvido no âmbito da disciplina de Projeto Tecnológico</p>
+</footer>
+
 </body>
 </html>
