--- a/contactos.html
+++ b/contactos.html
@@ -155,7 +155,7 @@
     </header>
 
     <div class="container">
-        <h1>Contactos</h1>
+        <h1>Contactos e Informações Pessoais</h1>
 
         <!-- Morada -->
         <div class="contact-item">
@@ -209,7 +209,9 @@
     </div>
 
     <footer>
+        <p>Site em Construção</p>
         <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
+        <p>Projeto desenvolvido no âmbito da disciplina de Projeto Tecnológico</p>
     </footer>
 </body>
 </html>
