--- a/index.html
+++ b/index.html
@@ -81,8 +81,22 @@
         <a href="https://esepf.pt/" class="btn" target="_blank">Website da ESEPF</a>
     </section>
 
+    <section id="areasInteresse">
+        <h2>Áreas de Interesse</h2>
+        <p>Além da tecnologia, tenho interesse por diversas áreas que complementam meu perfil pessoal e profissional:</p>
+        <ul>
+            <li>Programação e Desenvolvimento de Software</li>
+            <li>Inteligência Artificial e Machine Learning</li>
+            <li>Aeronaves e Aviação</li>
+            <li>Automoveis</li>
+            <li>Viagens</li>
+        </ul>
+    </section>
+
     <footer>
+        <p>Site em Construção</p>
         <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
+        <p>Projeto desenvolvido no âmbito da disciplina de Projeto Tecnológico</p>
     </footer>
 </body>
 </html>
