--- a/Flightbase.html
+++ b/Flightbase.html
@@ -143,9 +143,11 @@
             <a href="projetos.html" class="btn">Voltar</a>
         </div>
     </div>
-
+    
     <footer>
+        <p>Site em Construção</p>
         <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
+        <p>Projeto desenvolvido no âmbito da disciplina de Projeto Tecnológico</p>
     </footer>
 </body>
 </html>
