--- a/projetos.html
+++ b/projetos.html
@@ -121,7 +121,9 @@
     </section>
 
     <footer>
+        <p>Site em Construção</p>
         <p>© 2024 Diogo Menezes. Todos os direitos reservados.</p>
+        <p>Projeto desenvolvido no âmbito da disciplina de Projeto Tecnológico</p>
     </footer>
 </body>
 </html>
